--- a/BenMakesGames.MonoGame.Palettes/BenMakesGames.MonoGame.Palettes.csproj
+++ b/BenMakesGames.MonoGame.Palettes/BenMakesGames.MonoGame.Palettes.csproj
@@ -1,29 +1,28 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <Version>1.0.0-3.8.1</Version>
-        <Nullable>enable</Nullable>
-        <WarningsAsErrors>Nullable</WarningsAsErrors>
-        <Authors>Ben Hendel-Doying</Authors>
-        <Company>Ben Hendel-Doying</Company>
-        <Description>Additional color palettes, for use with MonoGame.</Description>
-        <Copyright>2021-2022 Ben Hendel-Doying</Copyright>
-        <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-        <PackageProjectUrl>https://github.com/BenMakesGames/MonoGame.Palettes</PackageProjectUrl>
-        <PackageTags>monogame color palette theme</PackageTags>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+    <Version>1.1.0</Version>
+    <Nullable>enable</Nullable>
+    <WarningsAsErrors>Nullable</WarningsAsErrors>
+    <Authors>Ben Hendel-Doying</Authors>
+    <Company>Ben Hendel-Doying</Company>
+    <Description>Additional color palettes, for use with MonoGame.</Description>
+    <Copyright>2021-2022 Ben Hendel-Doying</Copyright>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/BenMakesGames/MonoGame.Palettes</PackageProjectUrl>
+    <PackageTags>monogame color palette theme</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+  </ItemGroup>
 
-    <ItemGroup>
-        <None Include="..\LICENSE.md">
-            <Pack>True</Pack>
-            <PackagePath />
-        </None>
-    </ItemGroup>
+  <ItemGroup>
+    <None Include="../LICENSE.md" Pack="true" PackagePath="" />
+    <None Include="../README.md" Pack="true" PackagePath="" />
+  </ItemGroup>
 
 </Project>
