--- a/BenMakesGames.RetroPalettes/BenMakesGames.RetroPalettes.csproj
+++ b/BenMakesGames.RetroPalettes/BenMakesGames.RetroPalettes.csproj
@@ -4,8 +4,8 @@
         <Authors>Ben Hendel-Doying</Authors>
         <Company>Ben Hendel-Doying</Company>
         <Description>Color palettes for classic gaming systems, for use with MonoGame.</Description>
-        <Copyright>2021-2023 Ben Hendel-Doying</Copyright>
-        <Version>1.1.0</Version>
+        <Copyright>2021-2024 Ben Hendel-Doying</Copyright>
+        <Version>1.2.0</Version>
 
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageTags>monogame color palette theme</PackageTags>
@@ -20,6 +20,7 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
         <WarningsAsErrors>Nullable</WarningsAsErrors>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
